--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -40,7 +40,7 @@
     </ol><br>
     <h3>Done: </h3>
     <ol class="done">
-      <li>Placeholder</li>
+      <li>8 tutorials and exercises of events (Lynda). I can now say i understand bubbling vs capturing [cf. ecma entry!]</li>
 
     </ol>
     <hr>
