--- a/states/misc/misc.html
+++ b/states/misc/misc.html
@@ -1,8 +1,15 @@
-<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=sunburst"></script>
+<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=desert"></script>
 <div class="misc-container">
 <aside><span class="rot90">{{state}}</span></aside>
 <div class="misc-entry entry">
-<h3 class="ltblue">Interesting point about this:</h3>
+<h3 class="w40">Interesting cursor: image trick</h3>
+as a css rule:
+<pre class="prettyprint w40">
+div {
+  cursor: url('img/finger.png'), pointer;
+}</pre>
+  <hr>
+<h3 class="wh">Interesting point about this:</h3>
 (<span><a href="http://stackoverflow.com/questions/7479282/this-vs-this">FROM HERE</a></span>)
 
 <pre>
