entry and cleanup

--- a/directive_templates/navdirective.html
+++ b/directive_templates/navdirective.html
@@ -1,6 +1,6 @@
 <!-- <aside><span class="rot90">{{state}}</span></aside> -->
 </h1><h2 id="appName">Code Journal</h2>
-<nav>
+<nav class="navbar">
   <ul>
     <li class="navlink-container"><a ui-sref="home">HOME</a></li>
     <li class="navlink-container"><a ui-sref="journal">JOURNAL</a></li>
