--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -2,35 +2,47 @@
 <div class="journal-container">
   <div class="journal-entry entry">
     <!-- <hr>
-    <h2 class="date">Thursday May 4th, 2017</h2>
-    <h4 class="sleep">Slept: 8 hours</h4><br><br>
-    <h3 class="subtitle">Feel Good. Starting to feel like things are less simple. Reviewing this jquery
-    is easy and am getting more out of it. I'm iterating over SASS but ng custom directives video is looming over my head.
-  Let's get to work.</h3>
+    <h2 class="date">X May Xth, 2017</h2>
+    <h4 class="sleep">Slept: X hours</h4><br><br>
+    <h3 class="subtitle">Placeholder</h3>
 
     <br>
     <h3>To do:</h3>
-    <ol id="sidebar" class="todo">
-      <li>2 jquery tuts+ effects vids</li>
-      <li>sugar-substitute</li>
-      <li>transfer jquery notes in to codejournal</li>
-      <li>one FCC algorithm</li>
-      <li>sass vid</li>
+    <ol class="todo">
+      <li>PlaceholderForTasks</li>
     </ol><br>
     <h3>Done: </h3>
     <ol class="done">
-
-
+      <li>PLACEHOLDERDONETASKS</li>
     </ol>
       -->
-    <h2 class="date">Monday May 9th, 2017</h2>
+    <hr>
+    <h2 class="date">Wednesday May 10th, 2017</h2>
+    <h4 class="sleep">Slept: 7 hours-ish</h4><br><br>
+    <h3 class="subtitle">Slept fitfully. Motivation is lower than yesterday. Lack of sleep? --frustration with event handling? --not certain.<br />
+    I have lots to do and haven't reviewed any node this week. Let's not talk, let's do.</h3>
+
+    <br>
+    <h3>To do:</h3>
+    <ol class="todo">
+      <li>Complete 4 more tutorials regarding event handling.</li>
+      <li>One jQuery Tutorial.</li>
+      <li>pay Parking Ticket</li>
+      
+    </ol><br>
+    <h3>Done: </h3>
+    <ol class="done">
+      <li>PLACEHOLDERDONETASKS</li>
+    </ol>
+
+    <h2 class="date">Tuesday May 9th, 2017</h2>
     <h4 class="sleep">Slept: 6 hours</h4><br><br>
     <h3 class="subtitle">Did lots of work on directives. Still having trouble with scope.<br><br />Am advised to default to '<' one-way binding scope. Still not sure how to leverage it in an app, though.
     <br><br /> Events last night & more today. --Would like to continue with jQuery and get closer to finishing the sass tutorials.</h3>
 
     <br>
     <h3>To do:</h3>
-    <ol id="sidebar" class="todo">
+    <ol class="todo">
       <li>2 jquery tuts+ effects vids</li>
       <li>js events</li>
       <li>transfer jquery notes in to codejournal</li>
@@ -52,7 +64,7 @@
 
     <br>
     <h3>To do:</h3>
-    <ol id="sidebar" class="todo">
+    <ol class="todo">
       <li>2 jquery tuts+ effects vids</li>
       <li>sugar-substitute</li>
       <li>transfer jquery notes in to codejournal</li>
@@ -76,7 +88,7 @@
 
     <br>
     <h3>To do:</h3>
-    <ol id="sidebar" class="todo">
+    <ol class="todo">
       <li>DevMtn cust directives vid.</li>
       <li>2 jquery tuts+ effects vids</li>
       <li>sugar-substitute</li>
@@ -95,7 +107,7 @@
 
     <br>
     <h3>To do:</h3>
-    <ol id="sidebar" class="todo">
+    <ol class="todo">
       <li>2 jquery tuts+ effects vids</li>
       <li>sugar-substitute</li>
       <li>transfer jquery notes in to codejournal</li>
@@ -117,7 +129,7 @@
 
     <br>
     <h3>To do:</h3>
-    <ol id="sidebar" class="todo">
+    <ol class="todo">
       <li>2 jquery tuts+ effects vids</li>
       <li>sugar-substitute</li>
       <li>transfer jquery notes in to codejournal</li>
@@ -136,7 +148,7 @@
 
     <br>
     <h3>To do:</h3>
-    <ol id="sidebar" class="todo">
+    <ol class="todo">
       <li>3 jquery tuts+ effects vids</li>
       <li>tea-bags, sugar-substitute</li>
       <li>transfer jquery notes in to codejournal</li>
@@ -156,7 +168,7 @@
 
     <br>
     <h3>To do:</h3>
-    <ol id="sidebar" class="todo">
+    <ol class="todo">
       <li>3 jquery tuts+ effects vids</li>
       <li>tea-bags, sugar-substitute</li>
     </ol><br>
