--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -28,11 +28,13 @@
       <li>Complete 4 more tutorials regarding event handling.</li>
       <li>One jQuery Tutorial.</li>
       <li>pay Parking Ticket</li>
-      
+
     </ol><br>
     <h3>Done: </h3>
     <ol class="done">
-      <li>PLACEHOLDERDONETASKS</li>
+      <li><a href="http://www.asmarterwaytolearn.com/jquery/7.html">Smarter way to learn jquery</a></li>
+      <li>I am so done with half of events! There's still much to learn but I'm no longer afraid! 💥</li>
+      <li>I've begun raw .js loading events.</li>
     </ol>
 
     <h2 class="date">Tuesday May 9th, 2017</h2>
