--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -15,7 +15,28 @@
     <ol class="done">
       <li>PLACEHOLDERDONETASKS</li>
     </ol>
-      -->
+    -->
+    <hr>
+    <h2 class="date">Thursday May 11th, 2017</h2>
+    <h4 class="sleep">Slept: 8 hours</h4><br><br>
+    <h3 class="subtitle">Feeling good. A bit off since I haven't returned to node yet.<br />
+       I've got SVG and front-end to focus on & still have to get back to jquery which is what I started with a week ago.
+     <br /> Ugh... I have to finish that stuff. I will! Let's get started!</h3>
+
+    <br>
+    <h3>To do:</h3>
+    <ol class="todo">
+      <li>Pay Parking Ticket</li>
+      <li>Continue with Events (lynda)</li>
+      <li>DM Node tutorial</li>
+      <li>Add animation state to this app & begin an entry --it will combine SVG/CSS animation code & perhaps GSAP</li>
+      
+    </ol><br>
+    <h3>Done: </h3>
+    <ol class="done">
+      <li>PLACEHOLDERDONETASKS</li>
+    </ol>
+
     <hr>
     <h2 class="date">Wednesday May 10th, 2017</h2>
     <h4 class="sleep">Slept: 7 hours-ish</h4><br><br>
