--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -30,11 +30,11 @@
       <li>Continue with Events (lynda)</li>
       <li>DM Node tutorial</li>
       <li>Add animation state to this app & begin an entry --it will combine SVG/CSS animation code & perhaps GSAP</li>
-      
+
     </ol><br>
     <h3>Done: </h3>
     <ol class="done">
-      <li>PLACEHOLDERDONETASKS</li>
+      <li>Got well into media tag and the many methods and props on that object in HTML5</li>
     </ol>
 
     <hr>
