--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -35,6 +35,8 @@
     <h3>Done: </h3>
     <ol class="done">
       <li>Got well into media tag and the many methods and props on that object in HTML5</li>
+      <li>Completed audio jukebox. Learnt lots about removing, setting & getting attrs on DOM elements.</li>
+      
     </ol>
 
     <hr>
