--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -36,7 +36,7 @@
     <ol class="done">
       <li>Got well into media tag and the many methods and props on that object in HTML5</li>
       <li>Completed audio jukebox. Learnt lots about removing, setting & getting attrs on DOM elements.</li>
-      
+
     </ol>
 
     <hr>
@@ -55,7 +55,7 @@
     </ol><br>
     <h3>Done: </h3>
     <ol class="done">
-      <li><a href="http://www.asmarterwaytolearn.com/jquery/7.html">Smarter way to learn jquery</a></li>
+      <li><a target="_blank" href="http://www.asmarterwaytolearn.com/jquery/7.html">Smarter way to learn jquery</a></li>
       <li>I am so done with half of events! There's still much to learn but I'm no longer afraid! 💥</li>
       <li>I've begun raw .js loading events.</li>
     </ol>
