journal entry edit

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -31,12 +31,13 @@
       <li>DM Node tutorial</li>
       <li>Add animation state to this app & begin an entry --it will combine SVG/CSS animation code & perhaps GSAP</li>
 
+
     </ol><br>
     <h3>Done: </h3>
     <ol class="done">
       <li>Got well into media tag and the many methods and props on that object in HTML5</li>
       <li>Completed audio jukebox. Learnt lots about removing, setting & getting attrs on DOM elements.</li>
-
+      <li>I'm up to 21 in <a href="http://www.asmarterwaytolearn.com/jquery/21.html" target="_blank">a smarter way to learn jQuery</a></li>
     </ol>
 
     <hr>
