--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -2,8 +2,8 @@
 <div class="journal-container">
   <div class="journal-entry entry">
     <!-- <hr>
-    <h2 class="date">X May Xth, 2017</h2>
-    <h4 class="sleep">Slept: X hours</h4><br><br>
+    <h2 class="date">Friday May 13th, 2017</h2>
+    <h4 class="sleep">Slept: 4 hours</h4><br><br>
     <h3 class="subtitle">Placeholder</h3>
 
     <br>
@@ -15,7 +15,25 @@
     <ol class="done">
       <li>PLACEHOLDERDONETASKS</li>
     </ol>
-    -->
+  -->
+  <!-- ENTRY START -->
+<h2 class="date">Friday May 13th, 2017</h2>
+<h4 class="sleep">Slept: 4 hours</h4><br><br>
+<h3 class="subtitle">Very little sleep last night</h3>
+
+<br>
+<h3>To do:</h3>
+<ol class="todo">
+<li>node.js</li>
+</ol><br>
+<h3>Done: </h3>
+<ol class="done">
+<li>First review of node.js --> all pretty straightforward.</li>
+{Was an extremely busy day today with very little sleep 😓 }
+</ol>
+
+<hr>
+
     <hr>
     <h2 class="date">Thursday May 11th, 2017</h2>
     <h4 class="sleep">Slept: 8 hours</h4><br><br>
